fix:layout issues

--- a/src/app/reports/run-report/run-report.component.scss
+++ b/src/app/reports/run-report/run-report.component.scss
@@ -1,3 +1,12 @@
 .input {
   max-width: 37rem;
 }
+
+.form-grid {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-field {
+  width: 100%;
+}
