--- a/src/main.scss
+++ b/src/main.scss
@@ -305,6 +305,7 @@
 
 .flex-50 {
   flex: 0 0 50%;
+  margin-bottom: 1rem;
 }
 
 .flex-53 {
